--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 				<span class="blue">var</span> x = <span class="blue">10</span>;<br>
 				<br>
 				//Draw the car's body<br>
-				fill(<span class="blue">255, 0, 0) //Seriously, if you want the car body to be a different color, play around with the values.<br>
-				rect(x, 200, 100, 20);<br> draws a rectangle
+				fill(<span class="blue">255, 0, 0</span>) //Seriously, if you want the car body to be a different color, play around with the values.<br>
+				rect(x, <span class="blue">200, 100, 20</span>);<br> draws a rectangle
 				rect(x + 15, 178, 70, 40);<br>
 				<br>
 				// draw the wheels<br>
