--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<p>
-			Add these lines of code:
+			Add these lines of code:<br>
 			<code>
 				<span class="blue">var</span> myBackground = color(<span class="blue">0, 0, 255</span>);<br>
 				background(myBackground);<br>
